removing extra padding and fixing line height

--- a/htdocs/sites/all/themes/mc_base/css/colors.css
+++ b/htdocs/sites/all/themes/mc_base/css/colors.css
@@ -100,4 +100,5 @@ body {
     background-image: none;
     padding-left: 0px;
     height: auto;
+    line-height: normal;
 }
